Prepare car details page

--- a/CarCatalogue/Views/Shared/_Layout.cshtml
+++ b/CarCatalogue/Views/Shared/_Layout.cshtml
@@ -40,7 +40,9 @@
         <partial name="~/Views/Shared/_AdminPanel.cshtml" />
     }
 
-    @RenderBody()
+    <div style="margin-top: 1rem; margin-left: 4rem; margin-right: 4rem;">
+        @RenderBody()
+    </div>
 
 
     <footer class="border-top footer text-muted">
