--- a/CarCatalogue/Views/Shared/_AdminPanel.cshtml
+++ b/CarCatalogue/Views/Shared/_AdminPanel.cshtml
@@ -6,9 +6,7 @@
     <div class="adminSidebarTitle">
         <h2 style="color:#ffdd99; font-size:36px;">Admin</h2>
     </div>
-    <a asp-area="Administration" asp-controller="Departments" asp-action="Create">Add Department</a>
-    <a asp-area="Administration" asp-controller="Services" asp-action="Create">Add Service</a>
-    <a asp-area="Administration" asp-controller="Employees" asp-action="Employees">Employees</a>
+    <a asp-area="Administration" asp-controller="Departments" asp-action="Create">Add Car</a>
 </div>
 
 <div id="main">
