Add paginated ListAllCars in the admin panel

--- a/CarCatalogue/Views/Shared/_AdminPanel.cshtml
+++ b/CarCatalogue/Views/Shared/_AdminPanel.cshtml
@@ -6,7 +6,7 @@
     <div class="adminSidebarTitle">
         <h2 style="color:#ffdd99; font-size:36px;">Admin</h2>
     </div>
-    <a asp-area="Administration" asp-controller="Departments" asp-action="Create">Add Car</a>
+    <a asp-controller="Administration" asp-action="GetPaginatedAndQueriedCars">List All</a>
 </div>
 
 <div id="main">
