--- a/CarCatalogue/Views/Administration/ListAllCars.cshtml
+++ b/CarCatalogue/Views/Administration/ListAllCars.cshtml
@@ -49,10 +49,12 @@
                 </th>
             </tr>
         </thead>
-        <tbody class="tbody">
-            @foreach (var car in Model.Items)
-            {
-                <tr></tr>
+        @if ((bool?)Model.Items?.Any() ?? false)
+        {
+            <tbody class="tbody">
+                @foreach (var car in Model.Items)
+                {
+                    <tr></tr>
                 <td class="td-card"><img class="img-card" src="@car.ImageUrl" /></td>
                 <td>@car.Id</td>
                 <td>@car.Make</td>
@@ -61,9 +63,10 @@
                 <td>@car.Horsepower</td>
                 <td>@car.Acceleration</td>
                 <td>@car.Weight</td>
-            <td><a href="#" onclick="return getbyID('@car.Id')">Edit</a> | <a href="#" onclick="Delete('@car.Id')">Delete</a></td>
-            }
-        </tbody>
+                <td><a href="#" onclick="return getbyID('@car.Id')">Edit</a> | <a href="#" onclick="Delete('@car.Id')">Delete</a></td>
+                }
+            </tbody>
+        }
     </table>
 </div>
 
@@ -81,6 +84,7 @@
             </div>
             <div class="modal-body">
                 <form>
+                    <div id="ValidationSummary" class="validation-create text-danger"></div>
                     <div class="form-group">
                         <label for="Make">Make</label>
                         <input type="text" class="form-control" id="Make" placeholder="Make" />
