Improve the validation messages and add custom attributes

--- a/CarCatalogue/Views/Administration/ListAllCars.cshtml
+++ b/CarCatalogue/Views/Administration/ListAllCars.cshtml
@@ -99,15 +99,15 @@
                     </div>
                     <div class="form-group">
                         <label for="Horsepower">Horsepower</label>
-                        <input type="text" class="form-control" id="Horsepower" placeholder="Horsepower" />
+                        <input type="number" class="form-control" id="Horsepower" placeholder="Horsepower" />
                     </div>
                     <div class="form-group">
                         <label for="Acceleration">Acceleration</label>
-                        <input type="text" class="form-control" id="Acceleration" placeholder="Acceleration" />
+                        <input type="number" class="form-control" id="Acceleration" placeholder="Acceleration" />
                     </div>
                     <div class="form-group">
                         <label for="Weight">Weight</label>
-                        <input type="text" class="form-control" id="Weight" placeholder="Weight" />
+                        <input type="number" class="form-control" id="Weight" placeholder="Weight" />
                     </div>
                     <div class="form-group">
                         <label for="Image">Image</label>
