--- a/CarCatalogue/Views/Administration/ListAllCars.cshtml
+++ b/CarCatalogue/Views/Administration/ListAllCars.cshtml
@@ -54,16 +54,17 @@
             <tbody class="tbody">
                 @foreach (var car in Model.Items)
                 {
-                    <tr></tr>
-                <td class="td-card"><img class="img-card" src="@car.ImageUrl" /></td>
-                <td>@car.Id</td>
-                <td>@car.Make</td>
-                <td>@car.Model</td>
-                <td>@car.Year.Value.Year</td>
-                <td>@car.Horsepower</td>
-                <td>@car.Acceleration</td>
-                <td>@car.Weight</td>
-                <td><a href="#" onclick="return getbyID('@car.Id')">Edit</a> | <a href="#" onclick="Delete('@car.Id')">Delete</a></td>
+                    <tr>
+                        <td class="td-card"><img class="img-card" src="@car.ImageUrl" /></td>
+                        <td>@car.Id</td>
+                        <td>@car.Make</td>
+                        <td>@car.Model</td>
+                        <td>@car.Year</td>
+                        <td>@car.Horsepower</td>
+                        <td>@car.Acceleration</td>
+                        <td>@car.Weight</td>
+                        <td><a href="#" onclick="return getbyID('@car.Id')">Edit</a> | <a href="#" onclick="Delete('@car.Id')">Delete</a></td>
+                    </tr>
                 }
             </tbody>
         }
@@ -85,6 +86,10 @@
             <div class="modal-body">
                 <form>
                     <div id="ValidationSummary" class="validation-create text-danger"></div>
+                    <div class="form-group">
+                        <label for="Id">Id</label>
+                        <input disabled type="text" class="form-control" id="Id" placeholder="Id" />
+                    </div>
                     <div class="form-group">
                         <label for="Make">Make</label>
                         <input type="text" class="form-control" id="Make" placeholder="Make" />
