--- a/CarCatalogue/Views/Shared/_AdminPanel.cshtml
+++ b/CarCatalogue/Views/Shared/_AdminPanel.cshtml
@@ -4,9 +4,9 @@
 
 <div id="mySidebar" class="sidebar">
     <div class="adminSidebarTitle">
-        <h2 style="color:#ffdd99; font-size:36px;">Admin</h2>
+        <h2 style="color:#0D0D0D; font-size:36px;">Admin</h2>
     </div>
-    <a asp-controller="Administration" asp-action="GetPaginatedAndQueriedCars">List All</a>
+    <a asp-controller="Administration" asp-action="GetPaginatedAndQueriedCars">Manage Cars</a>
 </div>
 
 <div id="main">
