--- a/CarCatalogue/Views/Shared/_Pagination.cshtml
+++ b/CarCatalogue/Views/Shared/_Pagination.cshtml
@@ -12,9 +12,9 @@
         text-align: center;
         justify-content: center;
     }
-
         .pagination a {
             font-size: 15px;
+            color: white;
         }
 </style>
 
