--- a/CarCatalogue/Views/Home/Index.cshtml
+++ b/CarCatalogue/Views/Home/Index.cshtml
@@ -1,8 +1,60 @@
-﻿@{
+﻿@using CarCatalogue.Models.Response;
+
+@model IEnumerable<CarResponseModel>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<link rel="stylesheet" href="~/custom/homePage/car-card.css" />
+
+<div class="container-fluid">
+    <h1 style="text-align: center;">Featured collections</h1>
+    <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="container-card">
+                <div class="wrapper-card">
+                    <div class="banner-image-card"> </div>
+                    <h1> Toyota Supra</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, <br />
+                        consectetur adipiscing elit.
+                    </p>
+                </div>
+                <div class="button-wrapper-card">
+                    <button class="btn outline">MORE</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="container-card">
+                <div class="wrapper-card">
+                    <div class="banner-image-card"> </div>
+                    <h1> Toyota Supra</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, <br />
+                        consectetur adipiscing elit.
+                    </p>
+                </div>
+                <div class="button-wrapper-card">
+                    <button class="btn outline">DETAILS</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="container-card">
+                <div class="wrapper-card">
+                    <div class="banner-image-card"> </div>
+                    <h1> Toyota Supra</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, <br />
+                        consectetur adipiscing elit.
+                    </p>
+                </div>
+                <div class="button-wrapper-card">
+                    <button class="btn outline">DETAILS</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
