Update navbar styles

--- a/CarCatalogue/Views/Home/Index.cshtml
+++ b/CarCatalogue/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="~/custom/homePage/car-card.css" />
 
 <div class="container-fluid">
-    <h1 style="text-align: center;">Featured collections</h1>
+    <h1 style="text-align: center; margin:3rem;">Featured collections</h1>
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="container-card">
