--- a/CarCatalogue/wwwroot/custom/homePage/car-card.css
+++ b/CarCatalogue/wwwroot/custom/homePage/car-card.css
@@ -1,9 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
-
-
-
-.container-card {
+﻿.container-card {
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
     background-color: #292929;
