Add Make page with pagination and search

--- a/CarCatalogue/Views/Administration/ListAllCars.cshtml
+++ b/CarCatalogue/Views/Administration/ListAllCars.cshtml
@@ -67,11 +67,15 @@
                 }
             </tbody>
         }
+        else
+        {
+            <h1>No cars found</h1>
+        }
     </table>
 </div>
 
 @*Pagination*@
-<partial name="../Shared/_Pagination.cshtml" model=@Model />
+<partial name="../Administration/Pagination.cshtml" model=@Model />
 @*Pagination*@
 
 @*MODAL*@
