--- a/CarCatalogue/wwwroot/css/site.css
+++ b/CarCatalogue/wwwroot/css/site.css
@@ -50,7 +50,7 @@ p {
 
 h1 {
     font-family: 'Righteous', sans-serif;
-    color: rgba(255,255,255,0.98);
+    color: moccasin;
     text-transform: uppercase;
     font-size: 2.4rem;
 }
