--- a/CarCatalogue/Views/Make/Index.cshtml
+++ b/CarCatalogue/Views/Make/Index.cshtml
@@ -29,14 +29,11 @@
                         <div class="wrapper-card">
                             <img src="@item.ImageUrl" class="banner-image-card" />
                             <h1> @item.Model </h1>
-                            <p>
-                                Lorem ipsum dolor sit amet, <br />
-                                consectetur adipiscing elit.
-                            </p>
+                            <p>item.Year</p>
                         </div>
-                        <div class="button-wrapper-card">
-                            <button class="btn outline">DETAILS</button>
-                        </div>
+                            <div class="button-wrapper-card">
+                                <a asp-controller="car" asp-action="car" asp-route-id="@item.Id" type="submit" class="btn outline">DETAILS</a>
+                            </div>
                     </div>
                 </div>
             }
